[#27] fix date box alignment

--- a/resources/styles/common.css
+++ b/resources/styles/common.css
@@ -230,6 +230,8 @@ span#timestamp {
     width: 100%;
     justify-content: space-between;
     flex-wrap: nowrap;
+    padding: 0 0.5em 0 0.5em;
+    box-sizing: border-box;
 }
 
 .date-picker {
